--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4840,10 +4840,10 @@ a.badge:focus {
   margin-left: 3px;
 }
 .jumbotron {
-  padding: 30px 15px;
-  margin-bottom: 30px;
+  padding: 15px 15px;
+  margin-bottom: 15px;
   color: inherit;
-  background-color: #eee;
+  background-color: white;
 }
 .jumbotron h1,
 .jumbotron .h1 {
